test/sema/exercise/struct_invalid_member_type.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  nested: INVALID,
  // CHECK: [[# @LINE - 1 ]]:3: error: unable to resolve 'INVALID' type of struct field
}

fn main(): void {}
